# discord-gym-reminder

./: .env.example  .gitignore  Cargo.toml  Makefile  diesel.toml  rustfmt.toml  test_schedule.yaml
docker/: docker-compose.yml
migrations/2024-09-15-083853_create_users/: up.sql
migrations/2024-09-16-091016_create_categories/: down.sql  up.sql
migrations/2024-09-16-092007_create_exercises/: down.sql  up.sql
migrations/2024-09-24-033835_create_schedules/: down.sql  up.sql
migrations/2024-10-15-085024_create_schedules_musculatures/: down.sql  up.sql
src/: handler.rs  main.rs  schema.rs
src/db/: mod.rs  models.rs  repositories.rs
src/db/models/: exercise.rs  mod.rs  musculature.rs  relationships.rs  schedule.rs  user.rs
src/db/repositories/: exercise.rs  mod.rs  musculature.rs  schedule.rs  user.rs
src/handlers/: dto.rs  file_upload.rs  mod.rs  types.rs  utils.rs
