[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serenity = "0.12.2"
dotenv = "0.15.0"
reqwest = "0.12.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"

# db
diesel = { version = "2.2.4", features = [
    "extras",
] } # no backend features need to be enabled
diesel-async = { version = "0.5.0", features = ["postgres", "bb8"] }
diesel_async_migrations = "0.15.0"

# error handling
anyhow = "1.0.89"
thiserror = "1.0.63"

# logging
log = "0.4.22"
env_logger = "0.11.5"
